--- a/application.yml
+++ b/application.yml
@@ -6,3 +6,11 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
   instance:
     hostname: localhost
+    
+spring:
+  datasource:
+    username: postgres
+    url: jdbc:postgresql://localhost:5432/department
+    driverClassName: org.postgresql.Driver
+    platform: postgres
+    password: password
